--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,1 +1,6 @@
-#TO_MODIFY
+FROM node:19-alpine
+WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm install 
+COPY index.js db.config.js ./
+ENTRYPOINT [ "node", "index.js" ]
